gcc/testsuite/rust/rustc/ui/tuple/array-diagnostics.rs
fn main() {
    let _tmp = [
        ("C200B40A82", 3),
        ("C200B40A83", 4) // { dg-error ".E0618." "" { target *-*-* } }
        ("C200B40A8537", 5),
    ];
}

